welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: reassignment to val
			i=1
                         ^